chore: ignore gui workspace implementation for now